--- a/desafio-1/index.html
+++ b/desafio-1/index.html
@@ -12,7 +12,7 @@
         <div class="conteudo-caixa">
             <h1 class="titulo">Sugestão de Alimentos</h1>
             <ul>
-                <li>Manga - <span class="preco">R$10,00</span></li>
+                <li>Graviola - <span class="preco">R$10,00</span></li>
                 <li>Uva - <span class="preco">R$15,00</span></li>
                 <li>Morango - <span class="preco">R$20,00</span></li>
                 <li>Açai - <span class="preco">R$30,00</span></li>
