feito titulo, e adicionado link e imagem no index.html. No css foi posicionado o titulo e a imagem

--- a/desafio-2/index.html
+++ b/desafio-2/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
-    
+    <h1>Imagem com Link Externo</h1>
+    <div class="imagem">
+        <a href="https://google.com" target="_blank"><img class="forma" src="https://via.placeholder.com/150" alt="imagem-retangulo"></a>
+    </div>  
 </body>
 </html>
