--- a/desafio-4/index.html
+++ b/desafio-4/index.html
@@ -8,6 +8,37 @@
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
-    
+    <table class="roupas">
+        <tr>
+            <th>Produto</th>
+            <th>Tamanho</th>
+            <th>Valor</th>
+        </tr>
+        <tr>
+            <td>Camiseta</td>
+            <td>M</td>
+            <td>R$49,00</td>
+        </tr>
+        <tr>
+            <td>Tênis</td>
+            <td>42</td>
+            <td>R$5,00</td>
+        </tr>
+    </table>
+
+    <table class="moveis-eletros">
+        <tr>
+            <th>Produto</th>
+            <th>Valor</th>
+        </tr>
+        <tr>
+            <td>Sofá</td>
+            <td>R$1.200,00</td>
+        </tr>
+        <tr>
+            <td>Televisão</td>
+            <td>R$5.000,00</td>
+        </tr>
+    </table>
 </body>
 </html>
