adicionado titulo nas tabelas

--- a/desafio-4/index.html
+++ b/desafio-4/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <table class="roupas">
+        <h2 class="titulo-tabela">Moda</h2>
         <tr>
             <th>Produto</th>
             <th>Tamanho</th>
@@ -27,6 +28,7 @@
     </table>
 
     <table class="moveis-eletros">
+        <h2 class="titulo-tabela">Casa</h2>
         <tr>
             <th>Produto</th>
             <th>Valor</th>
