--- a/desafio-4/index.html
+++ b/desafio-4/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tabela Estilizada</title>
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
     <table class="roupas">
         <h2 class="titulo-tabela">Moda</h2>
-        <tr>
+        <tr class="cabecalho-tabela-roupas">
             <th>Produto</th>
             <th>Tamanho</th>
             <th>Valor</th>
@@ -29,7 +29,7 @@
 
     <table class="moveis-eletros">
         <h2 class="titulo-tabela">Casa</h2>
-        <tr>
+        <tr class="cabecalho-tabela-moveis-eletros">
             <th>Produto</th>
             <th>Valor</th>
         </tr>
